<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single"

         >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/nav_gift_card"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="Gift Card" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/nav_movies" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policyyy" />
        </menu>
    </item>

</menu>