<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/linearLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".SignatureActivity"
android:background="@android:color/white">

<TextView
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimaryDark"
<<<<<<< HEAD
    android:text="@string/sign_here"
    android:textColor="@android:color/white"
    android:textSize="16sp"
=======
    android:text="Sign Here"
    android:textColor="@android:color/white"
    android:textSize="16dp"
>>>>>>> 564a7a32a4057aaaec8d5771acaa1571ed83bd06
    android:gravity="center"/>
<LinearLayout
    android:id="@+id/buttonLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:background="@android:color/white">
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:text="@string/hint_cancel"
        tools:ignore="ButtonStyle"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />
    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hint_clear"
        tools:ignore="ButtonStyle"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />
    <Button
        android:id="@+id/getsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hint_save"
        tools:ignore="ButtonStyle"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />
</LinearLayout>

<LinearLayout
    android:id="@+id/canvasLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CanvasBackground"
    android:orientation="vertical" />
</LinearLayout>

