<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity"

    >



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/tendp"
            android:layout_marginBottom="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                >

                <TextView
                    android:id="@+id/rtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="75dp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAppearance="?android:textAppearanceSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_states"
                    android:hint="@string/hint_name"
                    android:padding="@dimen/edittext_padding"
                    android:singleLine="true"
                    android:layout_marginTop="40dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:inputType="textCapWords"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rtitle"
                    app:layout_constraintVertical_bias="0.355"
                    tools:layout_editor_absoluteX="0dp"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tendp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edittext_padding"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:background="@drawable/rounded_edittext_states"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    app:layout_constraintStart_toStartOf="@id/name"/>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tendp"
                    android:background="@drawable/rounded_edittext_states"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:padding="@dimen/edittext_padding"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@id/email"
                    app:layout_constraintStart_toStartOf="@id/name"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tendp"
                    android:background="@drawable/rounded_edittext_states"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/edittext_padding"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    app:layout_constraintTop_toBottomOf="@id/phone"
                    app:layout_constraintStart_toStartOf="@id/name"/>

                <!-- Login Button -->

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tendp"
                    android:background="@drawable/button_white"
                    android:text="@string/btn_register"
                    android:textAppearance="?android:textAppearanceSmall"
                    app:layout_constraintTop_toBottomOf="@id/password"
                    app:layout_constraintStart_toStartOf="@id/name"/>

                <!-- Link to Login Screen -->

                <Button
                    android:id="@+id/btnLinkToLoginScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="?android:textAppearanceSmall"
                    app:layout_constraintTop_toBottomOf="@id/btnRegister"
                    app:layout_constraintStart_toEndOf="@id/btnRegister"/>


            </android.support.constraint.ConstraintLayout>
        </ScrollView>





</android.support.constraint.ConstraintLayout>