<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> 564a7a32a4057aaaec8d5771acaa1571ed83bd06
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutUsActivity"
    tools:showIn="@layout/activity_about_us">


<<<<<<< HEAD

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/fourdp"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/back"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:onClick="aboutUsBack"
                android:padding="@dimen/tendp"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_weight="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textSize="20sp"
                android:padding="@dimen/tendp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/input_register_bg"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/back"
                />
        </android.support.constraint.ConstraintLayout>


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_filymart"
                android:layout_margin="@dimen/tendp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:id="@+id/aboutInfo"
            android:layout_margin="@dimen/tendp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_marginBottom="@dimen/tendp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="@dimen/tendp"/>

            <TextView
                android:id="@+id/what"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what"
                android:layout_margin="@dimen/tendp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutInfo"
                android:textAppearance="?android:textAppearanceLarge"/>

            <TextView
                android:id="@+id/what2"
                android:layout_margin="@dimen/tendp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what2"
                android:layout_marginBottom="@dimen/tendp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/what"
                android:layout_marginTop="@dimen/tendp"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>




</android.support.constraint.ConstraintLayout>
=======
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp" />

</RelativeLayout>
>>>>>>> 564a7a32a4057aaaec8d5771acaa1571ed83bd06

